@@ -382,6 +382,7 @@ AS_VAR_POPDEF([rbcv])
 ])
 
 RUBY_FUNC_ATTRIBUTE(noreturn, NORETURN)
+RUBY_FUNC_ATTRIBUTE(deprecated, DEPRECATED)
 RUBY_FUNC_ATTRIBUTE(noinline, NOINLINE)
 
 AC_CACHE_CHECK([for RUBY_EXTERN], rb_cv_ruby_extern,
