@@ -1,3 +1,12 @@
+Sun Jul 19 14:03:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* configure.in (DEPRECATED): backported from trunk.
+
+	* eval.c (rb_mod_autoload): should use SafeStringValue() instead
+	  obsolete Check_SafeStr().
+
+	* ruby.h (rb_check_safe_str, rb_str2cstr): deprecation warning.
+
 Sat Jul 18 12:05:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ruby.h (RFLOAT_VALUE, RSTRING_END, RREGEXP_SRC_*, RBIGNUM_*):
